--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,8 +26,10 @@
         </activity>
         
         <activity android:name="activity.WeatherActivity">
-            
         </activity>
+        
+        <receiver android:name="receiver.AutoUpdateReceiver"></receiver>
+        <service android:name="service.AutoUpdateService"></service>
         
     </application>
 
