--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,22 +12,28 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".ChooseAreaActivity"
+            android:name="activity.ChooseAreaActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         
         <activity android:name="activity.WeatherActivity">
         </activity>
         
+        <activity android:name="activity.SearchCityActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            
+        </activity>
+        
+        <activity android:name="activity.ShowWeatherActivity"></activity>   
+             
         <receiver android:name="receiver.AutoUpdateReceiver"></receiver>
         <service android:name="service.AutoUpdateService"></service>
         
